<resources>
    <string name="app_name" translatable="false">Learning Management System</string>
    <string name="welcome_to_lms">Welcome to LMS app\nLet\'s get started...</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="you_can_change_later">You can change it later in the settings.</string>
    <string name="select_your_preferred_language">Select Your Preferred Language</string>
    <string name="select_language_message">Please select a language before proceeding</string>
    <string name="select_your_preferred_mode">Select Your Preferred Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="select_mode_message">Please select a mode before proceeding</string>
    <string name="explore">Explore</string>
    <string name="learn">Learn</string>
    <string name="connect">Connect</string>
    <string name="study">Study</string>
    <string name="login_prompt">Please enter your account details ...</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="remember_me">Remember username</string>
    <string name="sign_in">Sign in</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_username_invalid">Invalid username.</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="sign_in_success">Signed in successfully</string>
    <string name="sign_in_failed">Sign in failed. Please check the entered information</string>
    <string name="logo_desc">SVU LMS Logo</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="days_left">Days left</string>
    <string name="_28" translatable="false">28</string>
    <string name="remaining">Remaining</string>
    <string name="_4" translatable="false">4</string>
    <string name="completed">Completed</string>
    <string name="_1" translatable="false">1</string>
    <string name="assignment_to_do">Assignment to do</string>
    <string name="_5" translatable="false">5</string>
    <string name="assignment_details">Assignment details:</string>
    <string name="_15" translatable="false">15%</string>
    <string name="_85" translatable="false">85%</string>
    <string name="registered">Registered</string>
    <string name="passed">Passed</string>
    <string name="courses_details">Courses details:</string>
    <string name="dashboard">Dashboard</string>
    <string name="_6" translatable="false">6</string>
    <string name="_13" translatable="false">13</string>
    <string name="courses">Courses</string>
    <string name="assignment">Assignments</string>
    <string name="notifications">Notifications</string>
    <string name="remaining1">Remaining</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="omar_al_boushi">Omar Al Boushi</string>
    <string name="bachelor_in_communications_technology_bact">Bachelor in Communications Technology - BACT</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_by_course_name_or_code">Search course by name or code</string>
    <string name="enter_course_name">Enter course name or code</string>
    <string name="courses_overview">Courses overview:</string>
    <string name="filter_courses">Filter Courses</string>
    <string name="switch_to_lists">Switch to lists</string>
    <string name="switch_to_cards">Switch to cards</string>
    <string name="switch_to_cards_button">Switch to cards button</string>
    <string name="switch_to_lists_button">Switch to lists button</string>
    <string name="course_title_1">Network &amp; IT Infrastructure Security</string>
    <string name="course_title_2">Probability &amp; Statistics</string>
    <string name="course_title_3">Digital Communications</string>
    <string name="course_title_4">Project Management</string>
    <string name="course_title_5">Mobile Application</string>
    <string name="newCourse">New</string>
    <string name="search_by_assignment_name_or_code">Search assignment by course name or code</string>
    <string name="assignment_overview">Assignment overview:</string>
    <string name="filter_assignment">Filter Assignment</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="start_first">start first</string>
    <string name="end_first">end first</string>
    <string name="progress">Progress</string>
    <string name="go_details">Go Details</string>
    <string name="make_all_as_read">Make all as read</string>
    <string name="unread">Unread</string>
    <string name="all">All</string>
    <string name="notification_content_added">New content has been added to the resources section for %s. Explore it now!</string>
    <string name="notification_assignment_graded">Your assignment for %s has been graded. You can now view the details.</string>
    <string name="notification_assignment_added">A new assignment has been added in %s. Please review and complete it.</string>
    <string name="date_28_nov_2024">28 November 2024, 01:22 AM</string>
    <string name="date_29_nov_2024_am">29 November 2024, 10:15 AM</string>
    <string name="date_30_nov_2025">30 November 2025, 03:45 PM</string>
    <string name="date_1_dec_2025" translatable="false">1 December 2025, 05:55</string>
    <string name="date_2_dec_2025_pm" translatable="false">8 December 2025, 09:32</string>
    <string name="student_role">Student</string>
    <string name="doctor_role">Doctor</string>
    <string name="coordinator_role">Coordinator</string>
    <string name="program_manager_role">Program Manager</string>
    <string name="system_manager_role">System Manager</string>
    <string name="mazen_Al_boushi" translatable="false">Mazen Al Boushi</string>
    <string name="radwan_kastantin" translatable="false">Radwan Kastantin</string>
    <string name="raouf_hamdan" translatable="false">Raouf Hamdan</string>
    <string name="abeer_kharfan" translatable="false">Abeer Kharfan</string>
    <string name="lana_kaddourah" translatable="false">Lana Kaddourah</string>
    <string name="john_description">I am a third-year student in the Computer Science Department.</string>
    <string name="jane_description">I am a doctor specializing in Software Engineering.</string>
    <string name="alice_description">I am a coordinator responsible for organizing courses.</string>
    <string name="section_course_materials">Course materials</string>
    <string name="section_s24_semester">S24 Semester</string>
    <string name="btn_course_identification">Course identification</string>
    <string name="btn_book_pdf">Book / PDF</string>
    <string name="btn_training_exam">Training Exam</string>
    <string name="btn_participants">Participants</string>
    <string name="btn_recorded_sessions">Recorded Sessions</string>
    <string name="btn_references">References</string>
    <string name="btn_semester_plan">Semester plan</string>
    <string name="btn_slides_powerpoint">Slides / PowerPoint</string>
    <string name="btn_assignments">Assignments</string>
    <string name="btn_tools">Tools</string>
    <string name="search_by_name_or_id_of_user">Search by name or id of user</string>
    <string name="no_files_available">No files available currently</string>
    <string name="file_already_added">This file is already added</string>
    <string name="no_files_to_edit">No files to edit</string>
    <string name="choose_file_to_edit">Please choose a file to edit</string>
    <string name="no_files_to_delete">No files to delete</string>
    <string name="choose_file_to_delete">Please choose a file to delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_delete">Are you sure delete?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_files_selected">No files to delete</string>
    <string name="file_size_exceeds">File size exceeds the maximum allowed %1$.0f MB</string>
    <string name="uploading_files">Uploading files...</string>
    <string name="upload_successful">Files uploaded successfully</string>
    <string name="submitted_for_grading">Submitted for grading</string>
    <string name="opened">Opened:</string>
    <string name="_19_november_2024_12_00_am">19 November 2024, 12:00 AM</string>
    <string name="due">Due:</string>
    <string name="_21_december_2024_12_00_am">21 December 2024, 12:00 AM</string>
    <string name="submission_status">Submission status:</string>
    <string name="no_attempt">No attempt</string>
    <string name="grading_status">Grading status:</string>
    <string name="not_graded">Not graded</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="_30_days_9_hours">30 Days 9 Hours</string>
    <string name="last_modified">Last modified:</string>
    <string name="submit_or_edit_submission">Submit or edit submission</string>
    <string name="mobile_application_for_a_goods_selling_company">Mobile application for a goods selling company</string>
    <string name="assignment_upload">Assignment Upload</string>
    <string name="select_your_file_from_here">Select your file from here</string>
    <string name="max_size_is_200_mb">Max size is 200 MB</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="logout">Logout</string>
    <string name="languages">Languages</string>
    <string name="account">Account</string>
    <string name="appearance">Appearance</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="contact">Contact</string>
    <string name="bio">Bio</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_bio_en">Your bio in English...</string>
    <string name="your_bio_ar">Your bio in Arabic...</string>
    <string name="fav_reset_dialog_title">Confirm Action</string>
    <string name="fav_reset_dialog_message">Are you sure you want to delete all favorites?</string>
    <string name="fav_reset_dialog_positive">Yes</string>
    <string name="fav_reset_dialog_negative">No</string>
    <string name="reset_all_favorites">reset all favorites</string>
    <string name="favorites">Favorites</string>
    <string name="confirm">Confirm</string>
    <string name="events_label">Events</string>
    <string name="calendar_title">Calendar</string>
    <string name="no_events">There are no events for the selected day.</string>
    <string name="calendar_instruction">Click on a date in the calendar to view recorded events.</string>
    <string name="event_apr17_1">GMA205 assignment submission deadline</string>
    <string name="event_apr17_2">Start of INT305 practice test</string>
    <string name="event_apr17_3">Extra synchronous lecture IPG101</string>
    <string name="event_apr17_4">Extra synchronous lecture IPG204</string>
    <string name="event_apr20_1">Extra synchronous lecture for CEE203</string>
    <string name="event_apr20_2">Start of graduation project submissions for all majors</string>
    <string name="event_apr20_3">Project presentation submission</string>
    <string name="event_apr20_4">Extra synchronous lecture IPG101</string>
    <string name="event_apr22_1">Results of CCN404 practice test evaluation</string>
    <string name="event_may01_1">Feedback form submission</string>
    <string name="favorites_empty">Your favorites is empty \n🌚</string>
</resources>