<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_dashboard"
        android:enabled="true"
        android:icon="@drawable/dashboard_icon"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/fragment_courses"
        android:enabled="true"
        android:icon="@drawable/courses_icon"
        android:title="@string/courses"/>
    <item
        android:id="@+id/fragment_assignments"
        android:enabled="true"
        android:icon="@drawable/assignment_icon"
        android:title="@string/assignment"/>
    <item
        android:id="@+id/fragment_notifications"
        android:enabled="true"
        android:icon="@drawable/notifications_icon"
        android:title="@string/notifications"/>

</menu>