<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Custom_MainColorBlue"
    android:layoutDirection="locale"
    android:padding="16dp"
    android:id="@+id/parentLayout"
    tools:context=".ui.activities.ModeSelectionActivity">

    <!-- عنوان الشاشة -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="start"
        android:text="@string/select_your_preferred_mode"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- النص التوضيحي -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:gravity="start"
        android:text="@string/you_can_change_later"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- مجموعة الأزرار -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle">

        <!-- زر اختيار اللغة الإنجليزية -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLightMode"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/light_mode"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="12dp"
            app:strokeColor="@color/Custom_MainColorGolden"
            app:strokeWidth="3dp" />

        <!-- زر اختيار اللغة العربية -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDarkMode"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/dark_mode"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="12dp"
            app:strokeColor="@color/Custom_MainColorGolden"
            app:strokeWidth="3dp" />
    </LinearLayout>


    <!-- زر بدء التطبيق -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center|center_vertical"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@color/Custom_MainColorGolden"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
