<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Custom_BackgroundColor">

    <!-- شريط الأدوات العلوي -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Custom_BackgroundColor"
        android:fitsSystemWindows="true"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_anchorGravity="top"
        app:liftOnScrollColor="@color/Custom_BackgroundColor">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Custom_BackgroundColor"
            android:fadeScrollbars="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_scrollFlags="scroll|snap"
            app:navigationIcon="@drawable/arrow___left"
            app:navigationIconTint="@color/Custom_Black">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/favorites"
                android:textColor="@color/md_theme_onSurface_highContrast"
                android:textSize="30sp" />

            <!-- أيقونة الحساب يبقى كما هو -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/omar_photo"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                app:strokeColor="@color/md_theme_primary"
                app:strokeWidth="3dp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="32dp"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/reset_all_favorites"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    app:backgroundTint="#B3261E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardsBtn"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/switch_to_cards_button"
                    android:tooltipText="@string/switch_to_cards"
                    app:icon="@drawable/cards_selector"
                    app:iconSize="14dp"
                    app:iconTint="@color/Custom_Black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/listBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute,TouchTargetSizeCheck,RedundantDescriptionCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/listBtn"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/switch_to_lists_button"
                    android:tooltipText="@string/switch_to_lists"
                    app:icon="@drawable/list_selector"
                    app:iconSize="14dp"
                    app:iconTint="@color/Custom_Black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute,RedundantDescriptionCheck,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/empty_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/favorites_empty"
                android:textColor="@color/Custom_Black"
                android:fontFamily="@font/cairo_light"
                android:textAlignment="center"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>